syntax = "proto3";

package jobworkerp.runner;

// # shell command arguments
message McpServerArgs {
  // # tool name in the server
  string tool_name = 1;
  // # arguments json
  string arg_json = 2;
}
